[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "miasma"
version = "0.1.0"
description = "A lightweight, plugin-driven verifier of high-confidence vulnerabilities for bug-bounty recon-to-verification handoff."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "Bugsy Hewitt" }]
dependencies = [
    "nmap-wrapper @ git+https://github.com/bugsyhewitt/nmap-wrapper",
    "httpx>=0.27",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
miasma = "miasma.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["miasma*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
